dist/demo-server/Middleware.demo-server-retry.k8s.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: demo-server-retry
  namespace: galah-testbed
spec:
  retry:
    attempts: 5
    initialInterval: 100ms
