dist/demo-server/Service.demo-server.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-server
  namespace: galah-testbed
spec:
  externalIPs: []
  ports:
    - name: http
      port: 7080
      protocol: TCP
      targetPort: 7080
    - name: http-metrics
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: demo-server
    cdk8s.io/metadata.addr: demo-server-deployment-c87777bc
  type: ClusterIP
