dist/demo-server/IngressRoute.demo-server-ingressroute.k8s.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-server-ingressroute
  namespace: galah-testbed
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/testbed/`)
      middlewares:
        - name: demo-server-retry
          namespace: galah-testbed
        - name: strip-testbed
          namespace: galah-testbed
      services:
        - kind: Service
          name: demo-server
          namespace: galah-testbed
          nativeLB: false
          port: 7080
